--- a/css/sagamore/revolution_captions.css
+++ b/css/sagamore/revolution_captions.css
@@ -167,7 +167,7 @@ text-shadow:none;
 font-weight:800;
 font-size:24px;
 line-height:20px;
-font-family:"Optima LT Std Roman", sans-serif;
+font-family:"Optima", sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -181,7 +181,7 @@ text-shadow:none;
 font-weight:800;
 font-size:24px;
 line-height:20px;
-font-family:"Optima LT Std Roman", sans-serif;
+font-family:"Optima", sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -195,7 +195,7 @@ text-shadow:none;
 font-weight:300;
 font-size:24px;
 line-height:20px;
-font-family:"Optima LT Std Roman", sans-serif;
+font-family:"Optima", sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -209,7 +209,7 @@ text-shadow:none;
 font-weight:800;
 font-size:30px;
 line-height:36px;
-font-family:"Optima LT Std Roman", sans-serif;
+font-family:"Optima", sans-serif;
 padding:3px 10px;
 margin:0px;
 border-width:0px;
@@ -225,7 +225,7 @@ text-shadow:none;
 font-weight:300;
 font-size:30px;
 line-height:36px;
-font-family:"Optima LT Std Roman", sans-serif;
+font-family:"Optima", sans-serif;
 padding:3px 10px;
 padding-top:1px;
 margin:0px;
@@ -270,7 +270,7 @@ text-shadow:none;
 font-weight:300;
 font-size:30px;
 line-height:30px;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 background-color:transparent;
 }
 
@@ -281,7 +281,7 @@ text-shadow:none;
 font-weight:300;
 font-size:16px;
 line-height:26px;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 background-color:transparent;
 }
 
@@ -292,7 +292,7 @@ text-shadow:none;
 font-weight:300;
 font-size:50px;
 line-height:70px;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 background-color:#000;
 padding:0px 20px;
 -webkit-border-radius:0px;
@@ -307,7 +307,7 @@ text-shadow:none;
 font-weight:300;
 font-size:50px;
 line-height:70px;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 background-color:#db4360;
 padding:0px 20px;
 -webkit-border-radius:0px;
@@ -322,7 +322,7 @@ text-shadow:none;
 font-weight:300;
 font-size:50px;
 line-height:70px;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 background-color:#fff;
 padding:0px 20px;
 -webkit-border-radius:0px;
@@ -337,7 +337,7 @@ text-shadow:none;
 font-weight:300;
 font-size:50px;
 line-height:70px;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 background-color:#67ae73;
 padding:0px 20px;
 -webkit-border-radius:0px;
@@ -369,7 +369,7 @@ border-style:none;
 font-size:60px;
 line-height:60px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(102, 102, 102);
 text-decoration:none;
 background-color:transparent;
@@ -385,7 +385,7 @@ border-style:none;
 font-size:34px;
 line-height:30px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(102, 102, 102);
 text-decoration:none;
 background-color:transparent;
@@ -401,7 +401,7 @@ border-style:none;
 font-size:18px;
 line-height:26px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(117, 117, 117);
 text-decoration:none;
 background-color:transparent;
@@ -429,7 +429,7 @@ border-style:none;
 font-size:58px;
 line-height:60px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(52, 73, 94);
 text-decoration:none;
 background-color:transparent;
@@ -442,7 +442,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(52, 73, 94);
@@ -456,7 +456,7 @@ border-style:none;
 font-size:24px;
 line-height:30px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(227, 58, 12);
 text-decoration:none;
 background-color:transparent;
@@ -470,7 +470,7 @@ border-style:none;
 font-size:21px;
 line-height:26px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(227, 58, 12);
 text-decoration:none;
 background-color:transparent;
@@ -484,7 +484,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(227, 58, 12);
@@ -498,7 +498,7 @@ border-style:none;
 font-size:24px;
 line-height:30px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(243, 156, 18);
 text-decoration:none;
 background-color:transparent;
@@ -511,7 +511,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(243, 156, 18);
@@ -535,7 +535,7 @@ border-style:none;
 font-size:58px;
 line-height:60px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -548,7 +548,7 @@ border-style:none;
 font-size:30px;
 line-height:36px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -562,7 +562,7 @@ border-style:none;
 font-size:34px;
 line-height:40px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -576,7 +576,7 @@ border-style:none;
 font-size:34px;
 line-height:40px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:#ffffff;
 text-decoration:none;
 background-color:transparent;
@@ -591,7 +591,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(127, 140, 141);
@@ -605,7 +605,7 @@ border-style:none;
 font-size:30px;
 line-height:36px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(0, 0, 0);
 text-decoration:none;
 background-color:transparent;
@@ -619,7 +619,7 @@ border-style:none;
 font-size:58px;
 line-height:60px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(0, 0, 0);
 text-decoration:none;
 background-color:transparent;
@@ -632,7 +632,7 @@ border-style:none;
 font-size:34px;
 line-height:40px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(52, 73, 94);
 text-decoration:none;
 background-color:transparent;
@@ -646,7 +646,7 @@ border-style:none;
 font-size:17px;
 line-height:28px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -666,7 +666,7 @@ border-style:none;
 font-size:40px;
 line-height:40px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(0, 0, 0);
@@ -680,7 +680,7 @@ border-style:none;
 font-size:30px;
 line-height:30px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(0, 0, 0);
 text-decoration:none;
 background-color:rgb(255, 255, 255);
@@ -696,7 +696,7 @@ color:rgb(255, 255, 255);
 font-size:80px;
 line-height:80px;
 font-weight:700;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 text-decoration:none;
 text-shadow:none;
 background-color:transparent;
@@ -707,22 +707,23 @@ border-style:none;
 
 .tp-caption.revelance-big {
 color:rgb(255, 255, 255);
-font-size:60px;
-line-height:60px;
-font-weight:700;
-font-family:"Optima LT Std Roman";
+font-size:80px;
+line-height:80px;
+font-weight:400;
+font-family:"Optima";
 text-decoration:none;
 text-shadow:none;
 background-color:transparent;
 border-width:0px;
 border-color:rgb(0, 0, 0);
 border-style:none;
+text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
 }
 
 .tp-caption.revelance-small-with-lines {
-font-size:25px;
-line-height:25px;
-font-family:"Optima LT Std Roman";
+font-size:32px;
+line-height:32px;
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 text-shadow:none;
@@ -731,12 +732,13 @@ border-width:0px;
 border-color:rgb(0, 0, 0);
 border-style:none;
 text-align: center;
+text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
 }
 
 .tp-caption.revelance-button {
 font-size:15px;
 line-height:15px;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 font-weight:600;
 color:#fff;
 text-decoration:none;
@@ -752,7 +754,7 @@ border-style:solid;
 font-size:70px;
 line-height:70px;
 font-weight:900;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 padding:50px;
@@ -787,7 +789,7 @@ border-style:none;
 font-size:70px;
 line-height:70px;
 font-weight:900;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 text-shadow:none;
@@ -811,7 +813,7 @@ border-style:solid none none none;
 font-size:20px;
 line-height:30px;
 font-weight:400;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -824,7 +826,7 @@ border-style:none;
 font-size:70px;
 line-height:70px;
 font-weight:900;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 text-shadow:rgba(0, 0, 0, 0.247059) 0px 0px 7px;
@@ -838,7 +840,7 @@ border-style:none;
 font-size:30px;
 line-height:40px;
 font-weight:700;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 text-shadow:rgba(0, 0, 0, 0.247059) 0px 0px 7px;
@@ -852,7 +854,7 @@ border-style:none;
 font-size:84px;
 line-height:84px;
 font-weight:800;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 padding:0px;
@@ -867,7 +869,7 @@ border-style:none;
 font-size:70px;
 line-height:70px;
 font-weight:300;
-font-family:"Optima LT Std Roman";
+font-family:"Optima";
 color:rgb(255, 255, 255);
 text-decoration:none;
 text-shadow:none;
