updated the logo image

--- a/_includes/sagamore_header.html
+++ b/_includes/sagamore_header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div id="logo">
             <a href="#">
-                <img id="main_logo" src="images/logo.png" alt="Sagamore">
+                <img id="main_logo" src="images/logo2.png" alt="Sagamore">
                 <img id="inversed_logo" src="images/logo2.png" alt="Sagamore">
             </a>
         </div>
