--- a/_includes/sagamore_header.html
+++ b/_includes/sagamore_header.html
@@ -3,7 +3,7 @@
         <div id="logo">
             <a href="#">
                 <img id="main_logo" src="images/logo2.png" alt="Sagamore">
-                <img id="inversed_logo" src="images/logo2.png" alt="Sagamore">
+                <img id="inversed_logo" src="images/logo.png" alt="Sagamore">
             </a>
         </div>
         <nav>
